--- a/ML.NET/Regression/CarsPricePrediction/CarsPricePrediction.csproj
+++ b/ML.NET/Regression/CarsPricePrediction/CarsPricePrediction.csproj
@@ -5,4 +5,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="BrandsModels.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
